--- a/css/style.css
+++ b/css/style.css
@@ -1216,8 +1216,21 @@ img.logos{
             font-weight: 400;
         }
 
+    img.bajada-desktop{
+        display: block;
+    }
+    img.bajada-movil{
+        display: none;
+    }
+
 /* Responsive para móviles */
 @media (max-width: 640px) {
+
+    h1,
+    .main-calendario h3{
+        font-size: 1.6rem;
+    }
+
     .profile-name {
         font-size: 1.5rem;
     }
@@ -1307,6 +1320,53 @@ img.logos{
     }
     .box-video-especialista p{
         font: 1.2rem / 1.3 'arial';
+    }
+
+    img.bajada-desktop{
+        display: none;
+    }
+    img.bajada-movil{
+        display: block;
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    .main-universo{        
+        padding-top: 100px;
+    }
+    body .video-container{
+        width: 37%;
+    }
+    .bg-planetas{
+        background: transparent;
+        margin-top: 0;
+    }
+    .universo-btn{
+            font-size: 1.1rem;
+            min-width: 50%;
+        }
+            .universo-btn:nth-child(1),
+            .universo-btn:nth-child(2),
+            .universo-btn:nth-child(3),
+            .universo-btn:nth-child(4) {
+                left: 0;
+                position: relative;
+                top: 0;
+                margin: 10px auto 30px;
+                display: block;
+            }
+
+}
+
+@media (max-width: 1024px) {
+
+    .bg-planetas{
+        width: 100%;
+    }
+    .video-container{
+        width: 28%;
     }
 
 }
