--- a/css/style.css
+++ b/css/style.css
@@ -939,6 +939,22 @@ img.logos{
             font-weight: 400;
         }
 
+        .bajada-desktop{
+                display: block;
+            }
+            .bajada-movil{
+                display: none;
+            }
+
+        #historia img,
+        #batidos img,
+        #alimentacion img,
+        #gadgets img{
+            display: block;
+            margin: 0 auto;
+            max-width: 600px;
+        }
+
         /* Responsive: En móviles poner una sola columna */
         @media (max-width: 640px) {
             .books-container {
@@ -986,6 +1002,14 @@ img.logos{
                 padding: 0 10px;
                 width: 95%;
             }
+
+            .bajada-desktop{
+                display: none;
+            }
+            .bajada-movil{
+                display: block;
+            }
+
         }
 
     .podcast-section {
@@ -1246,3 +1270,30 @@ img.logos{
             margin: 0;
             font-weight: 400;
         }
+
+    .box-footer{
+        background-color: #25028f;
+    padding: 50px 0;
+}
+    .box-footer img{
+        display: block;
+        margin: 10px auto 30px;
+        max-width: 80px;
+    }
+    .box-footer ul{
+        padding: 0;
+        text-align: center;
+    }
+        .box-footer ul li{
+            margin: 0 auto 10px;
+        }
+            .box-footer ul li p{
+                color: #fff;
+                font: .9rem/1.2 arial;
+                margin: 0;
+            }
+                .box-footer ul li span{
+                    display: block;
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
