--- a/css/style.css
+++ b/css/style.css
@@ -957,6 +957,11 @@ img.logos{
 
         /* Responsive: En móviles poner una sola columna */
         @media (max-width: 640px) {
+
+            body{
+                box-sizing: border-box;
+            }
+
             .books-container {
                 grid-template-columns: 1fr;
                 gap: 40px;
@@ -1009,7 +1014,48 @@ img.logos{
             .bajada-movil{
                 display: block;
             }
+            .bg-planetas{
+                display: none;
+                width: 100%;
+            }
 
+            .main-corredores h3,
+            .main-anatomia h3,
+            .main-apps h3,
+            .main-calendario h3,
+            .main-rutas h3,
+            .main-calendario h3{
+                font: 1.6rem / 1.3 'Druk Wide';
+            }
+            .video-container{
+                width: 68%;
+                height: 430px;
+            }
+            .box-video-especialista{
+                min-width: 90%;
+            }
+            .main-calendario .calendar-container{
+                width: 80%;
+            }
+            .contenido-inferior{
+                padding: 0;
+            }
+            .main-universo{
+                padding-top: 100px;
+            }
+            .profile-thumb{
+                margin: 0 5px 20px;
+            }
+            .quiz-container{
+                width: 90%;
+            }
+            .main-calendario,
+            .main-libros{
+                box-sizing: border-box;
+            }
+            .result-card{
+                width: 90%;
+            }
         }
 
     .podcast-section {
