--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ img.logos{
             border-radius: 15px; /* Esquinas muy redondeadas */
             overflow: hidden; /* Asegura que el contenido respete las esquinas */
            
-            box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+            /*box-shadow: 0 15px 30px rgba(0,0,0,0.3);*/
             
             display: none; /* Oculto por defecto */
             animation: fadeIn 0.5s;
@@ -1054,7 +1054,10 @@ img.logos{
                 box-sizing: border-box;
             }
             .result-card{
-                width: 90%;
+                width: 80%;
+            }
+            .main-header{
+                overflow: hidden;
             }
         }
 
