--- a/css/style.css
+++ b/css/style.css
@@ -326,9 +326,9 @@ img.logos{
 }
     .main-corredores h3{
         color: #fff;
-        font: 2.8rem/1.1 'Druk Wide';
+        font: 2.2rem / 1.1 'Druk Wide';
         margin: 0 auto 20px;
-        max-width: 560px;
+        max-width: 490px;
         text-align: center;
         text-transform: uppercase;
     }   
@@ -449,7 +449,7 @@ img.logos{
         max-width: 60px;
     }
     .main-rutas h3{
-        font: 2.8rem / 1.1 'Druk Wide';
+        font: 2.2rem / 1.1 'Druk Wide';
         font-style: italic;
         margin: 10px auto;
         max-width: 400px;
@@ -526,7 +526,7 @@ img.logos{
         .map-container {
             width: 100%;
             overflow: hidden;
-            max-width: 400px;
+            max-width: 345px;
             margin: 0 auto 30px;
         }
 
@@ -541,7 +541,7 @@ img.logos{
             display: flex;
             flex-direction: column;
             gap: 20px;
-            max-width: 400px;
+            max-width: 345px;
             margin: 10px auto;
         }
 
@@ -618,7 +618,7 @@ img.logos{
     }
     .main-anatomia h3{
         color: #fff;
-        font: 2.8rem / 1.1 'Druk Wide';
+        font: 2.2rem / 1.1 'Druk Wide';
         font-style: italic;
         margin: 10px auto 30px;
         max-width: 450px;
@@ -641,7 +641,7 @@ img.logos{
     }
         .box-video-especialista p{
             color: #fff;
-            font: 1.2rem / 1.1 'arial';
+            font: 1.2rem / 1.3 'arial';
             font-weight: 500;
             margin: 0 auto 20px;
             min-height: 43px;
@@ -664,7 +664,7 @@ img.logos{
     background-image: url('../img/bg-top-universo.webp');
     background-position: center top;
     background-repeat: no-repeat;
-    padding-top: 900px;
+    padding-top: 200px;
 }
     .box-botonera-universo{
         position: relative;
@@ -754,16 +754,16 @@ img.logos{
     padding: 30px 0 0;
 }
     .main-apps h3{
-        font: 1.8rem / 1.1 'Druk Wide';
+        font: 1.6rem / 1.3 'Druk Wide';
         font-style: italic;
         margin: 10px auto;
-        max-width: 600px;
+        max-width: 540px;
         text-align: center;
         text-transform: uppercase;
     }
 
     .apps-container {
-            max-width: 550px; 
+            max-width: 480px; 
             margin: 40px auto;
             width: 100%;
             display: flex;
@@ -950,7 +950,7 @@ img.logos{
         .book-title {
             color: #fff;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             font-weight: 900; /* Extra bold */
             line-height: 1.1;
             margin: 0 0 10px 0;
@@ -988,7 +988,7 @@ img.logos{
         #gadgets img{
             display: block;
             margin: 0 auto;
-            max-width: 600px;
+            max-width: 500px;
         }
 
         /* Responsive: En móviles poner una sola columna */
@@ -1023,7 +1023,7 @@ img.logos{
                 margin-bottom: 20px;
             }
             .book-title{
-                font-size: 1.8rem;
+                font-size: 1.4rem;
             }
             .book-author{
                 font-size: 1.6rem;
@@ -1061,7 +1061,7 @@ img.logos{
             .main-calendario h3,
             .main-rutas h3,
             .main-calendario h3{
-                font: 1.6rem / 1.3 'Druk Wide';
+                font: 1.4rem / 1.5 'Druk Wide';
             }
             .video-container{
                 width: 68%;
@@ -1077,7 +1077,7 @@ img.logos{
                 padding: 0;
             }
             .main-universo{
-                padding-top: 100px;
+                padding-top: 0px;
             }
             .profile-thumb{
                 margin: 0 5px 20px;
@@ -1110,6 +1110,9 @@ img.logos{
                 max-width: 95px;
                 position: absolute;
                 top: 75px;
+            }
+            .main-rutas p{
+                padding: 0 10px;
             }
         }
 
@@ -1148,7 +1151,7 @@ img.logos{
         .podcast-title {
             color: #fff;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 2rem;
+            font-size: 1.4rem;
             font-weight: 900; 
             text-transform: uppercase;
             margin: 10px 0;
@@ -1298,7 +1301,7 @@ img.logos{
 
     .calendar-container {
             background-color: #fff;
-            max-width: 450px; /* Ancho similar al de una columna móvil */
+            max-width: 375px; /* Ancho similar al de una columna móvil */
             margin: 20px auto;
             width: 100%;
             border-radius: 20px;
