--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ img.logos{
         margin: 10px auto 0;
         max-width: 500px;
         text-align: center;
-        text-shadow: 2px 2px 3px #000;
+        text-shadow: 2px 1px 2px #000;
     }
     img.logo-auspicio{
         left: 3%;
@@ -661,10 +661,10 @@ img.logos{
                 }
 .main-universo{
     background-color: #24028f;
-    background-image: url('../img/bg-top-universo.webp');
-    background-position: center top;
+    /*background-image: url('../img/bg-top-universo.webp');*/
+    background-position: center -250px;
     background-repeat: no-repeat;
-    padding-top: 200px;
+    padding-top: 100px;
 }
     .box-botonera-universo{
         position: relative;
@@ -681,6 +681,26 @@ img.logos{
             position: relative;
             width: 1200px;  
         }
+        .box-indicador{
+            bottom: 80px;            
+            left: 50%;
+            max-width: 200px;            
+            position: absolute;
+            transform: translate(-50%, 50%);
+            width: 100%;
+        }
+            .box-indicador img{
+                display: block;
+                margin: 0 auto;
+                max-width: 35px;
+            }
+            .box-indicador span{
+                color: #fff;
+                display: block;
+                font: 1rem/1.1 'arial';
+                margin: 10px auto;
+                text-align: center;
+            }
 
     /* Estilo de los Botones */
     .universo-btn {
@@ -696,22 +716,22 @@ img.logos{
         background-color: #f08323; 
         color: #000;
     }
-        .universo-btn:nth-child(1){
+        .universo-btn:nth-child(2){
             left: 250px;
             position: absolute;
             top: 50px;
         }
-        .universo-btn:nth-child(2){
+        .universo-btn:nth-child(3){
             right: 220px;
             position: absolute;
             top: 50px;
         }
-        .universo-btn:nth-child(3){
+        .universo-btn:nth-child(4){
             left: 310px;
             position: absolute;
             top: 205px;
         }
-        .universo-btn:nth-child(4){
+        .universo-btn:nth-child(5){
             right: 210px;
             position: absolute;
             top: 220px;
@@ -1051,7 +1071,9 @@ img.logos{
                 display: block;
             }
             .bg-planetas{
-                display: none;
+                background: transparent;
+                margin-top: 0;
+                text-align: center;
                 width: 100%;
             }
 
@@ -1114,6 +1136,39 @@ img.logos{
             .main-rutas p{
                 padding: 0 10px;
             }
+
+            .universo-btn:nth-child(2) {
+                left: inherit;
+                margin: 10px auto;
+                position: relative;
+                top: inherit;                
+                width: 80%;
+            }
+            .universo-btn:nth-child(3) {
+                right: inherit;
+                margin: 10px auto;
+                position: relative;
+                top: inherit;                
+                width: 80%;
+            }
+            .universo-btn:nth-child(4) {
+                left: inherit;
+                margin: 10px auto;
+                position: relative;
+                top: inherit;                
+                width: 80%;
+            }
+            .universo-btn:nth-child(5) {
+                right: inherit;
+                margin: 10px auto;
+                position: relative;
+                top: inherit;                
+                width: 80%;
+            }
+            .box-indicador{
+                display: none;
+            }
+
         }
 
     .podcast-section {
