--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,12 @@ body, html {
 }
 
                 #social{
-                    position: absolute;
+                    position: relative;
                     right: 10px;
                     top: 10px;
                     z-index: 600;
                     margin: 0;
+                    text-align: right;
                 }
                 #social ul{
                     display: inline-block;
